feat: add hover states design

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,9 @@
         class="grid w-full grid-flow-col justify-between place-self-center px-[0.95rem] pt-7 pb-[1.9rem] lg:max-w-[71.2rem] lg:bg-white lg:pb-[3.5rem] lg:pt-[5.6rem]"
       >
         <nav class="order-2 hidden sm:block">
-          <ul class="grid grid-flow-col gap-[2.4rem]">
+          <ul
+            class="grid grid-flow-col gap-[2.4rem] [&>li>a]:text-veryDarkBlue [&>li>a]:transition-all hover:[&>li>a]:text-softOrange"
+          >
             <li><a href="#">Home</a></li>
             <li><a href="#">New</a></li>
             <li><a href="#">Popular</a></li>
@@ -47,7 +49,7 @@
         />
       </header>
       <section
-        class="grid gap-16 place-self-center self-start px-[0.95rem] sm:grid-cols-2 sm:gap-y-0 [&>div]:gap-[1.4rem] [&>div>div]:order-2 sm:[&>div>div]:w-auto lg:max-w-[71.2rem] lg:grid-cols-[21.8rem_auto_21.9rem] lg:grid-rows-[20rem_11.8rem_auto_auto] lg:gap-x-[1.9rem] [&>div]:grid [&>div]:grid-cols-[6.35rem_auto] lg:[&>div]:mt-[4.5rem] [&>div>div]:grid [&>div>img]:order-1 [&>div>img]:h-[8.15rem] [&>div>img]:object-cover [&>div>div>p]:order-1 [&>div>div>p]:text-[2.1rem] [&>div>div>p]:font-800 [&>div>div>p]:leading-[2.1rem] [&>div>div>p]:text-grayishBlue [&>div>div>h2]:order-2 [&>div>div>h2]:mt-[0.7rem] [&>div>div>h3]:order-3 [&>div>div>h3]:mt-[0.4rem] [&>div>div>h3]:leading-[1.6rem] [&>div>div>h3]:text-darkGrayishBlue lg:[&>div>div>h3]:text-[0.95rem] [&>div>div>h2>a]:text-[1.1rem] [&>div>div>h2>a]:font-700 [&>div>div>h2>a]:text-veryDarkBlue lg:[&>div>div>h2>a]:text-[1.14rem]"
+        class="grid gap-16 place-self-center self-start px-[0.95rem] sm:grid-cols-2 sm:gap-y-0 [&>div]:gap-[1.4rem] [&>div>div]:order-2 sm:[&>div>div]:w-auto lg:max-w-[71.2rem] lg:grid-cols-[21.8rem_auto_21.9rem] lg:grid-rows-[20rem_11.8rem_auto_auto] lg:gap-x-[1.9rem] [&>div]:grid [&>div]:grid-cols-[6.35rem_auto] lg:[&>div]:mt-[4.5rem] [&>div>div]:grid [&>div>img]:order-1 [&>div>img]:h-[8.15rem] [&>div>img]:object-cover [&>div>div>p]:order-1 [&>div>div>p]:text-[2.1rem] [&>div>div>p]:font-800 [&>div>div>p]:leading-[2.1rem] [&>div>div>p]:text-grayishBlue [&>div>div>h2]:order-2 [&>div>div>h2]:mt-[0.7rem] [&>div>div>h3]:order-3 [&>div>div>h3]:mt-[0.4rem] [&>div>div>h3]:leading-[1.6rem] [&>div>div>h3]:text-darkGrayishBlue lg:[&>div>div>h3]:text-[0.95rem] [&>div>div>h2>a]:text-[1.1rem] [&>div>div>h2>a]:font-700 [&>div>div>h2>a]:text-veryDarkBlue [&>div>div>h2>a]:transition-all hover:[&>div>div>h2>a]:text-softRed lg:[&>div>div>h2>a]:text-[1.14rem]"
       >
         <h1
           class="order-2 -mt-[2.4rem] pr-2 text-[2.45rem] font-800 leading-[2.5rem] text-veryDarkBlue sm:col-start-1 sm:col-end-2 sm:row-start-2 sm:row-end-3 sm:mt-[1.65rem] sm:text-[3.5rem] sm:leading-[3.5rem]"
@@ -65,7 +67,7 @@
             really fulfilling its promise?
           </p>
           <button
-            class="mt-[1.35rem] place-self-start self-end bg-softRed px-[2rem] pt-[0.9rem] pb-[0.75rem] text-[0.9rem] font-700 uppercase tracking-[0.255rem] text-white text-opacity-90"
+            class="mt-[1.35rem] place-self-start self-end bg-softRed px-[2rem] pt-[0.9rem] pb-[0.75rem] text-[0.9rem] font-700 uppercase tracking-[0.255rem] text-white text-opacity-90 transition-all hover:bg-veryDarkBlue"
           >
             Read more
           </button>
@@ -84,7 +86,7 @@
           />
         </picture>
         <nav
-          class="order-4 bg-veryDarkBlue px-[1.3rem] pt-[1.1rem] sm:col-start-2 sm:col-end-3 sm:row-start-2 sm:row-end-4 sm:mb-8 lg:col-start-3 lg:col-end-4 lg:row-start-1 lg:row-end-3 lg:mb-0 lg:pl-[1.5rem] [&>div]:mt-[1.75rem] [&>div]:border-b-[1px] [&>div]:border-b-grayishBlue [&>div]:border-opacity-70 [&>div>a]:text-[1.25rem] [&>div>a]:font-700 [&>div>a]:text-white [&>div>p]:mt-[1rem] [&>div>p]:pr-4 [&>div>p]:leading-[1.65rem] [&>div>p]:text-grayishBlue [&>div>p]:text-opacity-70 lg:[&>div>p]:mt-[0.3rem]"
+          class="order-4 bg-veryDarkBlue px-[1.3rem] pt-[1.1rem] sm:col-start-2 sm:col-end-3 sm:row-start-2 sm:row-end-4 sm:mb-8 lg:col-start-3 lg:col-end-4 lg:row-start-1 lg:row-end-3 lg:mb-0 lg:pl-[1.5rem] [&>div]:mt-[1.75rem] [&>div]:border-b-[1px] [&>div]:border-b-grayishBlue [&>div]:border-opacity-70 [&>div>a]:text-[1.25rem] [&>div>a]:font-700 [&>div>a]:text-white [&>div>a]:transition-all hover:[&>div>a]:text-softOrange [&>div>p]:mt-[1rem] [&>div>p]:pr-4 [&>div>p]:leading-[1.65rem] [&>div>p]:text-grayishBlue [&>div>p]:text-opacity-70 lg:[&>div>p]:mt-[0.3rem]"
         >
           <h2
             class="-mb-[0.3rem] text-[2rem] font-700 text-softOrange text-opacity-95 lg:-mb-[0.8rem] lg:text-[2.8rem]"
