--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       >
         <nav
           id="main-navigation"
-          class="main-navigation fixed top-0 right-0 z-10 order-2 hidden h-full w-[68.5%] bg-white sm:relative sm:block"
+          class="navigation fixed top-0 right-0 z-10 order-2 hidden h-full w-[68.5%] bg-white sm:relative sm:block"
         >
           <ul
             class="grid grid-flow-row gap-[1.35rem] pl-[1.63rem] pt-[9rem] transition-all sm:grid-flow-col sm:gap-[2.4rem] sm:pl-0 sm:pt-0 [&>li>a]:text-[1.1rem] [&>li>a]:text-veryDarkBlue [&>li>a]:transition-all hover:[&>li>a]:text-softOrange"
@@ -48,7 +48,7 @@
           class="menu-button z-20 order-2 sm:hidden"
           aria-controls="main-navigation"
           aria-expanded="false"
-          name="menu-button"
+          name="button"
         >
           <img
             class="menu-button-closed place-self-center py-[0.45rem] sm:hidden"
@@ -70,7 +70,7 @@
         >
           The Bright Future of Web 3.0?
         </h1>
-        <section
+        <div
           class="order-3 -mt-16 sm:col-start-1 sm:col-end-2 sm:row-start-3 sm:row-end-4 sm:-mt-0 lg:col-start-2 lg:col-end-3 lg:row-start-2 lg:row-end-3 lg:grid lg:h-full lg:justify-between"
         >
           <p
@@ -85,7 +85,7 @@
           >
             Read more
           </button>
-        </section>
+        </div>
         <picture
           class="order-1 sm:col-start-1 sm:col-end-3 sm:row-start-1 sm:row-end-2 sm:mb-4 sm:max-h-[18.8rem] lg:mb-0"
         >
