--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,7 @@
           />
         </picture>
         <nav
+          id="aside-nav"
           class="order-4 bg-veryDarkBlue px-[1.3rem] pt-[1.1rem] sm:col-start-2 sm:col-end-3 sm:row-start-2 sm:row-end-4 sm:mb-8 lg:col-start-3 lg:col-end-4 lg:row-start-1 lg:row-end-3 lg:mb-0 lg:pl-[1.5rem] [&>div]:mt-[1.75rem] [&>div]:border-b-[1px] [&>div]:border-b-grayishBlue [&>div]:border-opacity-70 [&>div>a]:text-[1.25rem] [&>div>a]:font-700 [&>div>a]:text-white [&>div>a]:transition-all hover:[&>div>a]:text-softOrange [&>div>p]:mt-[1rem] [&>div>p]:pr-4 [&>div>p]:leading-[1.65rem] [&>div>p]:text-grayishBlue [&>div>p]:text-opacity-70 lg:[&>div>p]:mt-[0.3rem]"
         >
           <h2
